--- a/kiranshridharalva.html
+++ b/kiranshridharalva.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>KiranShridharAlva</title>
@@ -143,8 +139,8 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Experience/Achievements</h2>
-									<p>Built ETL Incremental Data Load Pipelines for Data migration, Performed cost analysis for Pipelines, 
-										Conducted candidate interviews for the role, Client interation and demo on ADF, 
+									<p>Built ETL Incremental Data Load Pipelines for Data migration, Developed spark sql scripts for data modeling, Performed cost analysis for Pipelines, 
+										Conducted candidate interviews for the role, Client interaction and demo on ADF, 
 										Obtained DP203 Certification on Data Engineering 2023</p>
 								</header>
 								<ul class="statistics">
