--- a/kiranshridharalva.html
+++ b/kiranshridharalva.html
@@ -38,7 +38,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Industry Skills</a></li>
 							<li><a href="#second">Experience/Achievements</a></li>
-							<li><a href="#mis">Game Develepment</a></li>
+							<li><a href="#mis">Game Development</a></li>
 							<li><a href="#cta">Contact</a></li>
 							
 						</ul>
@@ -95,7 +95,7 @@
 										</p>
 									</li>
 								</ul>
-								<footer class="major">
+								<footer class="minor">
 									<details id="learnMoreDetails">
 										<summary class="button special">Projects</summary>
 										<div>
@@ -104,7 +104,7 @@
 								   Worked on different datasets like covid, housing and movies. 
 								   Pushed these files from my local computer to git using git command prompt.
 								</p>
-								<footer class="major">
+								<footer class="minor">
 									<ul class="actions special">
 										<li><a href="https://github.com/kiyaalva/Portfolio" class="button" target= "_blank">DataProcessing/Git</a></li>
 									</ul>
@@ -114,7 +114,7 @@
 									Built star schema data model, loaded the data model on Synapse DB, configured it to Power Bi, Built a Bi Dashboard for 
 									insights. 
 								</p>
-								<footer class="major">
+								<footer class="small">
 									<ul class="actions special">
 										<li><a href="https://github.com/kiyaalva/Azure-Major-Project" class="button" target= "_blank">Azure Major ETL</a></li>
 										<li><a href="https://github.com/kiyaalva/AWS/blob/main/AWS%20Batch%20Time%20Analysis%20Project.pdf" class="button" target= "_blank">AWS Minor ETL</a></li>
@@ -172,7 +172,7 @@
 										<h2>Game Development</h2>
 									</header>
 									<p> 
-										Built my first game on Unity using C#, Launched it on itch.io a gaming platform. Do check it out.
+										Built a game on Unity using C#, launched it on itch.io a gaming platform. Do check it out.
 
 									</p>
 									<ul class="actions">
