--- a/kiranshridharalva.html
+++ b/kiranshridharalva.html
@@ -59,7 +59,7 @@
 											
 										</p>
 										<p>
-											Objective:To understand the process of loading and analysing data across platforms and the visualizing it for meaningfull insights.
+											Objective:To understand the process of loading and analysing data across platforms and then visualizing it for meaningfull insights.
 										</p>
 										<p>
 											My Major Skills: Python, SQL 
