--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
 										</header>
 										<p>
 											<strong>Description</Summary>:</strong><br>
-											I am Software Engineer with more than 3 years of experience in the tech industry.
+											I am a Software Engineer with more than 3 years of experience in the tech industry.
 											Started my journey in the year 2020:
 											 
 											 
