--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
 										<span class="image"><img src="images/cloud.png" alt="" /></span>
 										<h3>ETL</h3>
 										<p>
-											Build ETL pipelines, CDC pipelines for data migration prominently on Azure, optimal on AWS.
+											Built ETL pipelines, CDC pipelines for data migration prominently on Azure, optimal on AWS.
 											Implemented SSIS packages for ETL on SSMS.
 										</p>
 									</li>
@@ -100,7 +100,7 @@
 										<span class="image"><img src="images/analysis.png" alt="" /></span>
 										<h3>Python/Pyspark</h3>
 										<p>
-											Used Databricks and Jupyter to analyze data and draw parallels between different platforms. 
+											Utilized Databricks and Jupyter to analyze data and draw parallels between different platforms. 
 											Implemented raw data processing using pyspark on Databricks.
 									</li>
 								</ul>
